<resources>
    <string name="app_name">MSc in Computer Science</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Master of Science in Computer Science</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="msc_hku">Master of Science in Computer Science, HKU</string>
    <string name="prog_over">Programme Overview</string>
    <string name="more_detail">More Detail</string>
    <string name="mfpd">Message from the Programme Director</string>
    <string name="pd">Programme Director</string>
    <string name="admission">Admission 2019</string>
    <string name="prog_sch">Programme Schedule</string>
    <string name="comp_fee">Composition Fees</string>
    <string name="app_deadlines">Application Deadlines</string>
    <string name="info_session">Information Session</string>
    <string name="details_info_session">Details of the information session:</string>
    <string name="msc_compsc">MASTER OF SCIENCE IN COMPUTER SCIENCE</string>
    <string name="msc_compsc_cn">計算機科學理科碩士課程</string>
    <string name="msc_slogan">MASTER THE TECHNOLOGY AND STAY AHEAD</string>
    <string name="adm_button">Admission Details</string>
    <string name="messageFPD_fragment">We are living in the era where technology is widely accepted and becomes so commonplace that we doubt how we ever live without it.
        Mobile is a good prominent example. From businesses to individual consumers, everyone is connected to everyone, everywhere, all the time.
        Every day we hear of new technological breakthroughs, e.g. self-driving cars, organ-on-a-chip, smart glasses, drones; they are awe-inspiring.
        To remain in the game, the best IT professionals strive to maintain current knowledge and skills to take on these continual developments.\n\nThe Master of Science in Computer Science Programme is a comprehensive and challenging graduate programme with three specialisations and one general stream,
        namely Financial Computing Stream, Cyber Security Stream, Multimedia Computing Stream and General Computer Science Stream, to meet the needs of both industry and business in Asia,
        and to make the programme more unique among comparable programmes in the region.\n\nAs you can see from our curriculum, on one hand we have retained the nuts and bolts subjects to lay a strong foundation.
        But on the other hand, we updated and revised the curriculum continuously as we assess the career trends and needs of our students, and monitor rapid changes in technology developments.
        For example, hot topics like “fintech”, “blockchain” are included in some of our courses.\n\nIf you like the holistic approach of our teaching methods and curriculum, please consider enrolling in this established programme in a world-class university.\n\n\n
        Dr. K.P. Chow\n
        Programme Director</string>
    <string name="aboutHKU_fragement">The University of Hong Kong (HKU), founded in 1911, is the oldest of Hong Kong’s institutions of higher learning.
        It was also the alma mater of Dr. Sun Yat-sen, the founder of modern China.\n\nHKU, as a pre-eminent international university,
        seeks to sustain and enhance its excellence as an institution of higher learning through outstanding teaching and world-class research so as to produce
        well-rounded graduates with lifelong abilities to provide leadership within the societies they serve.\n\nHKU has ten faculties, a graduate school and a number of independent centres of studies and learning. In 2016-17,
        it had a student population of over 27,800, including over 16,100 undergraduates and 11,700 postgraduates, and an academic staff population of around 3,400.
        Coupled with an active alumni network and generous endowments for programme research and development, HKU is a dynamic and exciting institution.
        Stepping into Asia’s next century of phenomenal growth.</string>
    <string name="prog_over_detailed">The MSc(CompSc) programme is a comprehensive postgraduate study programme provides advanced and in-depth learning in Computer Science. The programme is credit unit based, with courses of both applied and fundamental nature. Students can choose from a comprehensive and diversified study in Computer Science courses or focussed streams of study. Focussed streams of study represent a cohesive collection of related courses that provides both fundamental and in-depth exposure to students in a given ICT domain.</string>
    <string name="adm_detailed">To help you make a decision, here is a summary of the facts and details you will need - programme schedule, composition fees and application deadlines.</string>
    <string name="program_overview"> Programme Overview </string>
    <string name="program_overview_detail">
    The MSc(CompSc) programme is a comprehensive postgraduate study programme provides advanced and in-depth learning in Computer Science.  The programme is credit unit based, with courses of both applied and fundamental nature.\n\nStudents can choose focussed streams of study or a comprehensive and diversified study in Computer Science, i.e. the General Stream.\n\nFocussed streams of study represent a cohesive collection of related courses that provides both fundamental and in-depth exposure to students in a given ICT domain.  Students can extend and deepen their knowledge in the specialization streams in Cyber Security, Multimedia Computing and Financial Computing.\n
    </string>
    <string name="program_overview_study_stream"> Study Stream </string>
    <string name="pattern_of_study"> Pattern of Study </string>
    <string name="pattern_of_study_detail"> Students are required to complete 72 credits of courses selected from the syllabus which must include capstone experience. </string>
    <string name="enrollment_mode"> Enrolment Mode </string>
    <string name="enrollment_mode_detail"> Students can study in one of the following enrolment modes:\n
        (a)Courses (60 credits)^ + Project \n\t\t\t\t(12 credits)\n
            \t\ti.e. 10 Courses + Project\n\n

        OR\n\n

        (b)Courses (48 credits)^ + Dissertation \n\t\t\t\t(24 credits)\n
            \t\ti.e. 8 Courses + Dissertation\n\n

        ^ Each course normally carries 6 credits\n</string>
    <string name="selection_of_courses"> Selection of Courses </string>
    <string name="selection_of_courses_detail"> Students shall select courses in accordance with the regulations of the degree. To qualify as a graduate of Cyber Security, Financial Computing, or Multimedia Computing Stream, students must pass at least 4 stream specific courses (at least 24 credits in total) in the corresponding subject group, and undertake a dissertation or a project in the area of the corresponding stream. For General Stream, students can choose any discipline courses from any subject group, and undertake a dissertation or a project in any area in computer science.\n\nStudents may select no more than 2 courses (at most 12 credits in total) offered by the MSc(ECom&amp;IComp) and MSc(Eng) curricula in the Faculty of Engineering as electives.</string>
    <string name="capstone_experience"> \nCapstone Experience – Dissertations and Projects </string>
    <string name="capstone_experience_detail"> The capstone experience will definitely be beneficial for students to put together what they have learnt in the programme and demonstrate a deeper understanding of the knowledge they have acquired. Students are required to complete a dissertation (24 credits) or a project (12 credits), and attend some supplementary workshops. The dissertation / project would represent students’ consolidated capstone experience in their study.\n</string>
    <string name="courses">Courses</string>
    <string name="msc_courses">MSc(CompSc) Courses</string>
    <string name="msc_courses_detail">The following is a list of courses offered for the MSc(CompSc) curriculum by the Department of Computer Science.  The courses, both in terms of range and syllabus, are updated and revised continuously by the Programme Committee and the Department.  Any revision requires University’s approval.  The list of courses is also subject to change because occasionally we may decide not to offer a particular course in one year or to add some new ones, based on the findings of the annual curriculum review.  Please refer to our website for updated information.</string>
    <string name="duration_img_title">Duration of Study &amp; Class Schedule</string>
    <string name="duration_of_study">Duration of Study</string>
    <string name="duration_of_study_detail">The MSc(CompSc) programme is offered in both full&#8211;time and part&#8211;time modes.\n\nThere are 3 semesters in an academic year, i.e. semester 1: September &#8211;&#8211; December, semester 2: January &#8211;&#8211; May and the summer semester: June &#8211;&#8211; August.\n\nPart&#8211;time: 2&#8211;3 years\n\nFull&#8211;time: 1&#8211;2 years</string>
    <string name="class_schedule">Class Schedule</string>
    <string name="class_schedule_detail">Classes are usually conducted in weekday evenings from 7:00 p.m., or during weekends.  Some courses will be offered mainly for full-time students in weekday daytime.</string>
    <string name="regulation_and_syllabus">Regulations and Syllabus</string>
    <string name="regulation">REGULATIONS</string>
    <string name="alumni_activities">Alumni Activities</string>
    <string name="alumni_association">MSc(CompSc) Alumni Association</string>
    <string name="alumni_association_detail">HKU is a journey, not a destination. When you left HKU, you are not alone for the rest of your life because you have the alumni association, your powerful backing forever.\n\mThe MSc(CompSc) Alumni Association strengthens the bonding and communication among our graduates, facilitates resources sharing and thus fulfills the responsibilities of being an HKU alumni. We aim at practicing the motto "Sapience and Virtue", working in unity, helping each other, contributing to our alma mater and serving the community.\n\nOur Alumni Association is not only the heritage of HKU, but also the wealth throughout our whole lives. It actively recruits not just new graduates each year. It also invites new and current students to join the big family before their graduation. Currently, we have bases throughout China, including Hong Kong, Beijing, Shanghai, Shenzhen and Chengdu. Every student who has studied the MSc(CompSc) programme can find their own home.\n\n<a href="http://www.hkumsccs.com" target="_blank">http://www.hkumsccs.com</a></string>
    <string name="cyber_security">Cyber Security</string>
    <string name="COMP7806">Topic in information security</string>
    <string name="arrow_down">▼</string>
    <string name="arrow_up">▲</string>
    <string name="COMP7901">Legal protection of digital property #</string>
    <string name="COMP7901_description">(6 credits)\nThis course introduces computer professionals to the various legal means of protecting digital property including computer software, algorithms, and any work or innovation in digital form. Focus is on the main issues in protecting digital property arising from developments in information technology, and their legal solutions. Topics covered include, but are not limited to, the following: 1) Copyright protection of software and websites, 2) Patent protection of software and algorithms, 3) Criminal sanctions against offences involving the digital technology.\n# Subject to University approval</string>
    <string name="COMP7903">Digital investigation and forensics</string>
    <string name="COMP7904">Information security: attacks and defense</string>
</resources>