<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Slider part -->
        <androidx.viewpager.widget.ViewPager
            android:id="@+id/header_slider"
            android:layout_width="match_parent"
            android:layout_height="200dp" />

        <!-- Programme Overview part -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginVertical="@dimen/std_margin_inter"
            android:layout_marginHorizontal="@dimen/std_margin_horiz"
            tools:targetApi="o" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/msc_hku"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="#56179C"
                android:shadowColor="#FAB80E"
                android:shadowRadius="10"
                android:shadowDx="4"
                android:shadowDy="4"
                android:textAlignment="center"
                android:layout_marginVertical="@dimen/std_margin_intra"
                tools:targetApi="o" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prog_over"
                android:textColor="#000000"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_marginVertical="@dimen/std_margin_intra"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/prog_over_brief"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prog_over_detailed"
                android:textColor="#dd000000"
                android:textSize="16sp"
                android:justificationMode="inter_word"
                android:layout_marginVertical="@dimen/std_margin_intra"
                tools:targetApi="o" />

            <Button
                android:id="@+id/prog_over_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/more_detail"
                android:layout_gravity="center"
                android:layout_marginVertical="@dimen/std_margin_intra"
                tools:targetApi="o" />

        </LinearLayout>


        <!--Message from Programme Director part-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:padding="0.5dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/mfpd_bg"
                android:contentDescription="TODO"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="horizontal"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:cardCornerRadius="40dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/chowkp"
                        android:contentDescription="@string/pd" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="280dp"
                    android:layout_height="80dp"
                    app:cardBackgroundColor="#4d000000"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="0dp"
                    android:onClick="messageFromDirector">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/mfpd"
                        android:textColor="#E0F7FA"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:gravity="center"/>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </RelativeLayout>

        <!--Admission part-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginVertical="@dimen/std_margin_inter"
            android:layout_marginHorizontal="@dimen/std_margin_horiz"
            tools:targetApi="o">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/admission"
                android:textColor="#000000"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_marginVertical="@dimen/std_margin_intra"
                tools:targetApi="o" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/adm_detailed"
                android:textColor="#dd000000"
                android:textSize="16sp"
                android:justificationMode="inter_word"
                android:layout_marginVertical="@dimen/std_margin_intra"
                tools:targetApi="o" />

            <Button
                android:id="@+id/admission_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/more_detail"
                android:layout_gravity="center"
                android:layout_marginVertical="@dimen/std_margin_intra"
                tools:targetApi="o" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/admission_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <!--Info Session part-->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_session"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:textSize="20sp"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/brochure_latest"
                    android:contentDescription="TODO"
                    android:adjustViewBounds="true"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/details_info_session"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="#000000"/>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow
                        android:background="@color/colorAccent">
                        <TextView
                            android:text="Date"
                            android:textStyle="bold"
                            android:textColor="#000000"
                            android:layout_column="0"/>
                        <TextView />

                        <TextView
                            android:text="Time"
                            android:textStyle="bold"
                            android:textColor="#000000"
                            android:layout_column="1"/>
                        <TextView />

                        <TextView
                            android:text="Venue"
                            android:textStyle="bold"
                            android:textColor="#000000"
                            android:layout_column="2"/>
                        <TextView />
                    </TableRow>

                    <TableRow
                        android:background="#F2F2F2">
                        <TextView
                            android:text="04 December 2018\n(Tuesday)"
                            android:textColor="#dd000000"
                            android:layout_column="0"/>

                        <TextView
                            android:text="6:30-8:00pm\nMSc(CompSc) and MSc(ECom&amp;IComp)\nInformation Session"
                            android:textColor="#dd000000"
                            android:layout_column="1"/>

                        <TextView
                            android:text="Theatre A, G/F\nChow Yei Ching Building\nThe University of Hong Kong,\nPokfulam Road"
                            android:textColor="#dd000000"
                            android:layout_column="2"/>
                    </TableRow>

                </TableLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>
